[tool.poetry]
name = "sopic"
version = "1.0.0"
description = "Helper for manufacturing station"
authors = ["Thomas 'Taldrain' Mariaux <taldrain@gmail.com>"]
license = "MIT"
repository = "https://github.com/Taldrain/sopic"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
colorlog = "^6.7.0"
graphviz = "^0.20.1"
pyside6 = "^6.4.3"
xdg-base-dirs = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<25.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
